--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "4.5.3",
+    "cross-env": "7.0.3",
     "react": "^17.0.1",
+    "react-bootstrap": "1.4.0",
     "react-dom": "^17.0.1",
+    "react-icons": "4.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-touch-events": "3.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "cross-env NODE_PATH=src react-scripts start",
+    "build": "cross-env NODE_PATH=src react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
