--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap": "4.5.3",
     "cross-env": "7.0.3",
     "react": "^17.0.1",
+    "react-alert": "7.0.2",
     "react-bootstrap": "1.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "4.1.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "react-touch-events": "3.0.0",
+    "reactstrap": "8.8.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
